--- a/OnclickShowSelectedCharacter/style.css
+++ b/OnclickShowSelectedCharacter/style.css
@@ -1,7 +1,61 @@
+* {
+    box-sizing: border-box;
+}
+
 #mySubmit{
+    position: relative;
     font-size: 1em;
+    color: rgb(255, 255, 255);
+    background-color: rgb(100, 165, 252);
+    border: 4px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.55);
+    cursor: pointer;
+    border-radius: 3px;
+    left: 1%;
+}
+#mySubmit:hover{
+    background-color:rgb(20, 85, 170);
 }
 .labelCharacter{
+    position: relative;
     font-family: Verdana;
-    font-style: italic;
+    color: rgb(255, 255, 255);
+    left: 1%;
+}
+.inputRadio{
+    position: relative;
+    left: 0.5%;
+}
+#p1Message{
+    position: relative;
+    font-family: Verdana;
+    font-size: large;
+    color: white;
+}
+#pickCharacter{
+    position: absolute;
+    width: 100%;
+    max-width: 1920px;
+    left: 0%;
+    top: 0%;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.55);
+    background-color: rgb(73, 73, 73);
+}
+#showStatus{
+    position: absolute;
+    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
+    padding: 10px;
+    left: 0%;
+    top: 100%;
+    padding-bottom: 50px;
+    background-color: rgb(15, 0, 0);
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.55);
+}
+#showPlayerStatus{
+    position: absolute;
+    font-family: Verdana;
+    font-size: large;
+    color: white;
 }
