--- a/OnclickShowSelectedCharacter/style.css
+++ b/OnclickShowSelectedCharacter/style.css
@@ -35,27 +35,63 @@
 #pickCharacter{
     position: absolute;
     width: 100%;
-    max-width: 1920px;
     left: 0%;
     top: 0%;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.55);
     background-color: rgb(73, 73, 73);
 }
-#showStatus{
-    position: absolute;
+#showStatus {
+    max-height: 0; /* Altura inicial zero para ocultar a div */
+    overflow: hidden; /* Esconder conteúdo que excede a altura */
+    transition: max-height 0.5s ease-out, opacity 0.5s ease-out; /* Transição suave de altura e opacidade */
+    visibility: hidden; /* Invisível inicialmente */
+    opacity: 0; /* Invisível com transição */
+    position: relative;
     width: 100%;
-    max-width: 1920px;
     margin: 0 auto;
     padding: 10px;
     left: 0%;
-    top: 100%;
-    padding-bottom: 50px;
     background-color: rgb(15, 0, 0);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.55);
 }
+
+#showStatus.active {
+    max-height: 60px; /* Altura final da div quando estiver visível */
+    visibility: visible; /* Visível quando ativa */
+    opacity: 1; /* Visível com transição */
+}
 #showPlayerStatus{
-    position: absolute;
+    position: relative;
     font-family: Verdana;
     font-size: large;
     color: white;
+    left: 2%;
+}
+#showEnemyStatus{
+    position: relative;
+    font-family: Verdana;
+    font-size: large;
+    color: white;
+    right: 2%;
+}
+#backgroundGif {
+    position: fixed; /* Fica fixo na tela */
+    top: 0;
+    left: 0;
+    width: 100vw; /* Largura da tela */
+    height: 100vh; /* Altura da tela */
+    overflow: hidden; /* Oculta qualquer overflow */
+    z-index: -1; /* Fica atrás do conteúdo */
+    background-color: rgba(0, 0, 0, 0.8); /* Fundo opcional para cobrir áreas não preenchidas */
+}
+
+/* Configuração da imagem dentro do contêiner do GIF */
+#backgroundGif img {
+    position: absolute; /* Posiciona a imagem dentro do contêiner */
+    top: 50%; /* Centraliza verticalmente */
+    left: 50%; /* Centraliza horizontalmente */
+    transform: translate(-50%, -50%); /* Ajusta o posicionamento para centralizar */
+    width: 100%; /* Ajusta a largura para cobrir o contêiner */
+    height: 100%; /* Ajusta a altura para cobrir o contêiner */
+    object-fit: cover; /* Ajusta a imagem para cobrir o contêiner */
 }
