--- a/ShortJsGame/style.css
+++ b/ShortJsGame/style.css
@@ -49,10 +49,11 @@
     width: 100%;
     margin: 0 auto;
     left: 0%;
+    display: flex;
     background-color: rgb(15, 0, 0);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.55);
-    justify-content: space-around; /* Espaça os elementos filhos */
-    align-items: center; /* Alinha verticalmente no centro */
+    justify-content:space-evenly; /* Espaça os elementos filhos */
+    align-items: center; /* space-aroundAlinha verticalmente no centro */
     gap: 50%;
 }
 #showStatus.active {
@@ -102,7 +103,7 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.55);
     border-radius: 3px;
     left: 1%;
-    transition: background-color 0.2s;
+    transition: background-color 0.3s;
 }
 #returnBtn.hover-active{
     background-color: rgb(252, 100, 100);
