--- a/ShortJsGame/style.css
+++ b/ShortJsGame/style.css
@@ -68,7 +68,7 @@
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.55);
     justify-content:space-evenly; /* Espaça os elementos filhos */
     align-items: center; /* space-aroundAlinha verticalmente no centro */
-    gap: 50%;
+    gap: 75%;
 }
 #showStatus.active {
     max-height: 60px; /* Altura final da div quando estiver visível */
@@ -125,4 +125,79 @@
 #returnBtn.hover-active:hover {
   cursor: pointer;
   background-color: rgb(170, 0, 0);
+}
+#healthBarContainer {
+    position: absolute;
+    left: 20%;
+    top: 0%;
+    transform: translate(-10%, 2320%);
+    width: 28%;
+    height: 8px;
+    border: 1px solid #000000;
+}
+
+#healthBar {
+    width: 53%;
+    height: 100%;
+    background-color: rgb(41, 255, 155);
+    position: fixed;
+    z-index: 2;
+}
+#backgroundHealth {
+    position: absolute;
+    width: 100%;
+    right: 0;
+    height: 100%;
+    background-color: rgba(41, 255, 155, 0.151);
+    z-index: 1;
+}
+#energyBar {
+    position: absolute;
+    width: 100%;
+    top: 150%;
+    height: 100%;
+    background-color: rgb(182, 94, 255);
+    z-index: 2;
+}
+#backgroundEnergy {
+    position: absolute;
+    width: 100%;
+    top: 150%;
+    height: 100%;
+    background-color: rgba(233, 0, 221, 0.137);
+    z-index: 1;
+}
+#healthBarEnemy {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(41, 255, 155);
+    position: absolute;
+    z-index: 2;
+    right: -133%;
+}
+#backgroundHealthEnemy {
+    position: absolute;
+    width: 100%;
+    right: -133%;
+    height: 100%;
+    background-color: rgba(41, 255, 155, 0.151);
+    z-index: 1;
+}
+#energyBarEnemy {
+    position: absolute;
+    width: 100%;
+    top: 150%;
+    height: 100%;
+    right: -133%;
+    background-color: rgb(182, 94, 255);
+    z-index: 2;
+}
+#backgroundEnergyEnemy {
+    position: absolute;
+    width: 100%;
+    top: 150%;
+    height: 100%;
+    right: -133%;
+    background-color: rgba(233, 0, 221, 0.137);
+    z-index: 1;
 }
