--- a/ShortJsGame/style.css
+++ b/ShortJsGame/style.css
@@ -56,7 +56,7 @@
     width: 100%;
     left: 0%;
     top: 0%;
-    transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
+    transition: max-height 0.5s ease-out;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.55);
     background-color: rgb(73, 73, 73);
     overflow: hidden;
@@ -146,12 +146,12 @@
     border: 1px solid #000000;
 }
 #healthBar {
-    width: 10%;
     height: 100%;
     background-color: rgb(41, 255, 155);
     position: fixed;
     z-index: 3;
     visibility: hidden;
+    transition: 0.35s;
 }
 #bleedingHealthBar{
     height: 100%;
@@ -171,7 +171,6 @@
 }
 #energyBar {
     position: absolute;
-    width: 0%;
     top: 150%;
     height: 100%;
     background-color: rgb(182, 94, 255);
@@ -185,7 +184,6 @@
     height: 100%;
     background-color: rgba(233, 0, 221, 0.137);
     z-index: 1;
-    visibility: hidden;
 }
 #healthBarEnemy {
     height: 100%;
@@ -194,6 +192,7 @@
     z-index: 3;
     right: -133%;
     visibility: hidden;
+    transition: 0.35s;
 }
 #bleedingHealthBarEnemy{
     height: 100%;
@@ -215,7 +214,6 @@
 }
 #energyBarEnemy {
     position: absolute;
-    width: 0%;
     top: 150%;
     height: 100%;
     right: -133%;
