--- a/ShortJsGame/style.css
+++ b/ShortJsGame/style.css
@@ -279,8 +279,7 @@
         display: flex;
         flex-direction: column;
         visibility: hidden;
-        transition: 0.15s ease;
-        z-index: 0;
+        transition: top 0.15s ease, visibility 0.15s;
         top: 273%;
         left: 11.5%;
         transform: translate(20%, 55.7%);
@@ -294,25 +293,10 @@
         visibility: visible;
         top: 298.5%;
     }
-    #button1Atk {
+    #button1Atk, #button2Atk, #button3Atk {
         width: 100%;
         background-color: rgb(24, 24, 24);
         font-size: 24px;
-        
-        color: rgb(255, 255, 255);
-    }
-    #button2Atk {
-        width: 100%;
-        background-color: rgb(24, 24, 24);
-        font-size: 24px;
-        
-        color: rgb(255, 255, 255);
-    }
-    #button3Atk {
-        width: 100%;
-        background-color: rgb(24, 24, 24);
-        font-size: 24px;
-        
         color: rgb(255, 255, 255);
     }
     /* Inicio Seta Branca pra Cima */
