--- a/ShortJsGame/style.css
+++ b/ShortJsGame/style.css
@@ -108,6 +108,9 @@
     font-size: large;
     color: white;
 }
+/*  ============================ */
+/*  Inicio media query <= 642px  */
+/*  ============================ */
 @media only screen and (max-width: 642px) {
     #C1img {
         transform: translate(5%, 61.6%);
@@ -137,7 +140,13 @@
         height: 8px;
         border: 1px solid rgb(0, 0, 0, 0.664);
     }
+    /*  ============================ */
+    /*  Fim media query <= 642px     */
+    /*  ============================ */
 }
+/*  ===================================== */
+/*  Inicio media query >= 643px <= 850px  */
+/*  ===================================== */
 @media only screen and (min-width: 643px) and (max-width: 850px) {
     #C1img {
         transform: translate(20%, 57.3%);
@@ -155,7 +164,13 @@
         height: 8px;
         border: 1px solid rgb(0, 0, 0, 0.664);
     }
+    /*  =================================== */
+    /*  Fim media query >= 643px <= 850px   */
+    /*  =================================== */
 }
+/*  ====================================== */
+/*  Inicio media query >= 851px <= 1024px  */
+/*  ====================================== */
 @media only screen and (min-width: 851px) and (max-width: 1024px) {
     #C1img {
         transform: translate(20%, 56.5%);
@@ -176,33 +191,237 @@
         height: 8px;
         border: 1px solid rgb(0, 0, 0, 0.664);
     }
+    /*  ====================================== */
+    /*  Fim media query >= 851px <= 1024px     */
+    /*  ====================================== */
 }
+/*  ======================================= */
+/*  Inicio media query >= 1025px <= 1366px  */
+/*  ======================================= */
 @media only screen and (min-width: 1025px) and (max-width: 1366px) {
     #C1img {
-        transform: translate(20%, 56.2%);
+        transform: translate(20%, 56.5%);
         position: absolute;
-        width: 340px;
-        height: 490px;
-        left: 5%;
+        width: 290px;
+        height: 450px;
+        left: 6%;
+        visibility: collapse;
     }
     #C1img.active {
         visibility: visible;
     }
+    #C11img {
+        transform: translate(-20%, 56.5%);
+        position: absolute;
+        width: 290px;
+        height: 450px;
+        right: 6%;
+        visibility: collapse;
+    }
+    #C11img.active {
+        visibility: visible;
+    }
+    #C2img {
+        transform: translate(20%, 56.5%);
+        position: absolute;
+        width: 290px;
+        height: 450px;
+        left: 6%;
+        visibility: collapse;
+    }
+    #C2img.active {
+        visibility: visible;
+    }
+    #C21img {
+        transform: translate(-20%, 56.5%);
+        position: absolute;
+        width: 290px;
+        height: 450px;
+        right: 6%;
+        visibility: collapse;
+    }
+    #C21img.active {
+        visibility: visible;
+    }
+    #characterAttacks {
+        z-index: 1;
+        width: 305px;
+        top: 250%;
+        height: 65px;
+        position: absolute;
+        left: 5.2%;
+        transform: translate(20%, 56.5%);
+        background-color: rgb(0, 0, 0);
+        border-radius: 4px;
+        font-size: 30px;
+        align-content: center;
+        text-align: center;
+        color: white;
+        box-shadow: 0 0 10px 2px rgba(255, 0, 0, 0.6);
+        transition: 0.2s;
+    }
+    #characterAttacks.active {
+        background-color: rgb(134, 0, 0);
+        cursor: pointer;
+        box-shadow: 0 0 60px 15px rgba(255, 0, 0, 0.8);
+        text-shadow: 0 0 8px rgba(255, 255, 255, 1);
+    }
+    #attackListContainer {
+        display: grid;
+        transition: max-height 0.9s ease, visibility 0.9;
+        top: 268.5%;
+        left: 5.2%;
+        transform: translate(20%, 56.5%);
+        position: absolute;
+        max-height: 0;
+        width: 305px;
+        border-radius: 4px;
+        background-color: rgb(0, 0, 0);
+        visibility: collapse;
+    }
+    #attackListContainer.active {
+        max-height: 300px;
+        visibility: visible;
+    }
+    #button1Atk, #button2Atk, #button3Atk {
+        width: 100%;
+        transition: 0.1s;
+        background-color: rgb(24, 24, 24);
+        font-size: 0px;
+        color: rgb(255, 255, 255);
+    }
+    #button1Atk.active, #button2Atk.active, #button3Atk.active {
+        font-size: 21px;
+    }
+    /* Inicio Seta Branca pra Cima */
+    #upSideArrow {
+        z-index: 1;
+        pointer-events: none;
+        transition: opacity 0.2s ease;
+        cursor: pointer;
+        position: absolute;
+        left: 1.5%;
+        top: 249%;
+        transform: translate(1100%, 56.5%);
+        font-size: 32px;
+        text-shadow: 0 0 15px rgb(255, 255, 255);
+        color: white;
+    }
+    #upSideArrow.hidden {
+        opacity: 0;
+    }
+    /* Fim Seta Branca pra  ======================== */
+    /* Inicio Seta Azul pra cima */
+    #upSideArrowEffect {
+        z-index: 1;
+        pointer-events: none;
+        cursor: pointer;
+        font-size: 32px;
+        left: 1.5%;
+        top: 245%;
+        transform: translate(1377%, 56.5%) rotate(-90deg);
+        position: absolute;
+        color: rgb(0, 217, 255);
+        visibility: hidden;
+        text-shadow: 0 0 15px rgb(138, 237, 255);
+    }
+    #upSideArrowEffect1 {
+        z-index: 1;
+        pointer-events: none;
+        cursor: pointer;
+        font-size: 32px;
+        left: 1.5%;
+        top: 249%;
+        transform: translate(1377%, 56.5%) rotate(-90deg);
+        position: absolute;
+        color: rgb(0, 217, 255);
+        visibility: hidden;
+        text-shadow: 0 0 15px rgb(138, 237, 255);
+    }
+    #upSideArrowEffect.active {
+        top: 239%;
+        transition: 0.2s;
+        visibility: visible;
+    }
+    #upSideArrowEffect1.active {
+        top: 234%;
+        transition: 0.28s;
+        visibility: visible;
+    }
+    /* Fim Seta Azul pra Cima  ======================== */
+    /* Inicio Seta Branca pra Baixo */
+    #upSideDownArrow {
+        z-index: 1;
+        pointer-events: none;
+        opacity: 0;
+        transition: opacity 0.2s ease;
+        cursor: pointer;
+        position: absolute;
+        top: 250%;
+        font-size: 32px;
+        transition: 0.2s opacity;
+        left: 1.5%;
+        text-shadow: 0 0 15px rgb(255, 255, 255);
+        color: white;
+        transform: translate(1100%, 56.5%);
+    }
+    #upSideDownArrow.active {
+        opacity: 1;
+    }
+    /* Fim Seta Branca pra Baixo  ======================== */
+    /* Inicio Seta Azul pra Baixo */
+    #upSideDownArrowEffect {
+        z-index: 1;
+        pointer-events: none;
+        cursor: pointer;
+        font-size: 32px;
+        left: 1.5%;
+        top: 252%;
+        transform: translate(1390%, 30.7%) rotate(90deg);
+        position: absolute;
+        color: rgb(0, 217, 255);
+        visibility: hidden;
+        text-shadow: 0 0 15px rgb(138, 237, 255);
+    }
+    #upSideDownArrowEffect1 {
+        z-index: 1;
+        pointer-events: none;
+        cursor: pointer;
+        font-size: 32px;
+        left: 1.5%;
+        top: 247%;
+        transform: translate(1390%, 30.7%) rotate(90deg);
+        position: absolute;
+        color: rgb(0, 217, 255);
+        visibility: hidden;
+        text-shadow: 0 0 15px rgb(138, 237, 255);
+    }
+    #upSideDownArrowEffect.active {
+        top: 258%;
+        visibility: visible;
+        transition: 0.2s;
+    }
+    #upSideDownArrowEffect1.active {
+        top: 263%;
+        visibility: visible;
+        transition: 0.28s;
+    }
+    /* Fim Seta Azul pra Baixo  ======================== */
     #showStatus {
-        gap: 70%;
+        gap: 78%;
     }
     #healthBarContainer {
         position: absolute;
-        left: 18.8%;
+        left: 15.9%;
         top: 0%;
         transform: translate(-10%, 2320%);
-        width: 29.2%;
+        width: 32%;
         height: 8px;
         border: 1px solid rgb(0, 0, 0, 0.664);
     }
-    #showStatus.singlePlayer {
-        gap: 70%;
-    }
+    /*  ======================================= */
+    /*  Fim media query >= 1025px <= 1366px     */
+    /*  ======================================= */
 }
 /*  ============================  */
 /*  Inicio media query >= 1367px  */
@@ -213,18 +432,18 @@
         position: absolute;
         width: 350px;
         height: 510px;
-        left: 12%;
+        left: 10%;
         visibility: hidden;
     }
     #C1img.active {
         visibility: visible;
     }
     #C11img {
-        transform: translate(20%, 55.7%);
+        transform: translate(-20%, 55.7%);
         position: absolute;
         width: 350px;
         height: 510px;
-        right: 20%;
+        right: 10%;
         visibility: hidden;
     }
     #C11img.active {
@@ -235,18 +454,18 @@
         position: absolute;
         width: 350px;
         height: 510px;
-        left: 12%;
+        left: 10%;
         visibility: hidden;
     }
     #C2img.active {
         visibility: visible;
     }
     #C21img {
-        transform: translate(20%, 55.7%);
+        transform: translate(-20%, 55.7%);
         position: absolute;
         width: 350px;
         height: 510px;
-        right: 20%;
+        right: 10%;
         visibility: hidden;
     }
     #C21img.active {
@@ -258,7 +477,7 @@
         top: 273%;
         height: 70px;
         position: absolute;
-        left: 11.5%;
+        left: 9.65%;
         transform: translate(20%, 55.7%);
         background-color: rgb(0, 0, 0);
         border-radius: 4px;
@@ -276,28 +495,31 @@
         text-shadow: 0 0 8px rgba(255, 255, 255, 1);
     }
     #attackListContainer {
-        display: flex;
-        flex-direction: column;
-        visibility: hidden;
-        transition: top 0.15s ease, visibility 0.15s;
-        top: 273%;
-        left: 11.5%;
+        display: grid;
+        top: 292%;
+        left: 9.65%;
+        visibility: collapse;
         transform: translate(20%, 55.7%);
+        transition: max-height 0.9s ease, visibility 0.9;
         position: absolute;
-        height: 70px;
+        max-height: 0;
         width: 360px;
         border-radius: 4px;
         background-color: rgb(0, 0, 0);
     }
     #attackListContainer.active {
+        max-height: 500px;
         visibility: visible;
-        top: 298.5%;
     }
     #button1Atk, #button2Atk, #button3Atk {
         width: 100%;
+        transition: 0.1s;
         background-color: rgb(24, 24, 24);
-        font-size: 24px;
+        font-size: 0px;
         color: rgb(255, 255, 255);
+    }
+    #button1Atk.active, #button2Atk.active, #button3Atk.active {
+        font-size: 24px;
     }
     /* Inicio Seta Branca pra Cima */
     #upSideArrow {
@@ -306,7 +528,7 @@
         transition: opacity 0.2s ease;
         cursor: pointer;
         position: absolute;
-        left: 11.6%;
+        left: 9.65%;
         top: 273%;
         transform: translate(1100%, 55.7%);
         font-size: 32px;
@@ -323,7 +545,7 @@
         pointer-events: none;
         cursor: pointer;
         font-size: 32px;
-        left: 11.6%;
+        left: 9.65%;
         top: 276%;
         transform: translate(1377%, 55.7%) rotate(-90deg);
         position: absolute;
@@ -336,7 +558,7 @@
         pointer-events: none;
         cursor: pointer;
         font-size: 32px;
-        left: 11.6%;
+        left: 9.65%;
         top: 279%;
         transform: translate(1377%, 55.7%) rotate(-90deg);
         position: absolute;
@@ -366,7 +588,7 @@
         top: 273%;
         font-size: 32px;
         transition: 0.2s opacity;
-        left: 11.6%;
+        left: 9.65%;
         text-shadow: 0 0 15px rgb(255, 255, 255);
         color: white;
         transform: translate(1100%, 55.7%);
@@ -381,7 +603,7 @@
         pointer-events: none;
         cursor: pointer;
         font-size: 32px;
-        left: 11.6%;
+        left: 9.65%;
         top: 279%;
         transform: translate(1390%, 30.7%) rotate(90deg);
         position: absolute;
@@ -394,7 +616,7 @@
         pointer-events: none;
         cursor: pointer;
         font-size: 32px;
-        left: 11.6%;
+        left: 9.65%;
         top: 283%;
         transform: translate(1390%, 30.7%) rotate(90deg);
         position: absolute;
@@ -425,7 +647,9 @@
         height: 8px;
         border: 1px solid rgb(0, 0, 0, 0.664);
     }
-/*  Fim media query >= 1367px */
+    /*  ============================  */
+    /*  Fim media query >= 1367px     */
+    /*  ============================  */
 }
 #returnBtn {
     position: relative;
