--- a/ShortJsGame/FrontEnd/enemy.css
+++ b/ShortJsGame/FrontEnd/enemy.css
@@ -1,11 +1,27 @@
 @media only screen and (min-width: 643px) and (max-width: 850px) {
+    #C11img, #C21img, #C31img {
+        transform: translate(-20%, 57.5%);
+        position: absolute;
+        width: 245px;
+        height: 385px;
+        right: -2%;
+        opacity: 0;
+        transition: 0.2s;
+        visibility: collapse;
+    }
+    #C11img.active, #C21img.active, #C31img.active {
+        z-index: 3;
+        opacity: 1;
+        visibility: visible;
+    }
     #enemyContainer {
         z-index: 4;
         width: 260px;
+        visibility: collapse;
         top: 229.5%;
         height: 55px;
         position: absolute;
-        right: -3.3%;
+        right: -3.4%;
         transform: translate(-20%, 57.5%);
         background-color: rgb(0, 0, 0);
         border-radius: 4px;
@@ -13,7 +29,137 @@
         align-content: center;
         text-align: center;
         color: white;
+        opacity: 0;
         box-shadow: 0 0 10px 2px rgba(255, 0, 0, 0.6);
         transition: 0.2s;
     }
+    #enemyContainer.selected {
+        opacity: 1;
+        visibility: visible;
+    }
+    #enemyContainer.active {
+        background-color: rgb(134, 0, 0);
+        cursor: pointer;
+        box-shadow: 0 0 60px 15px rgba(255, 0, 0, 0.8);
+        text-shadow: 0 0 8px rgba(255, 255, 255, 1);
+    }
+    /* Inicio Seta Branca pra Cima */
+    #upSideArrowEnemy {
+        z-index: 5;
+        pointer-events: none;
+        opacity: 0;
+        transition: opacity 0.2s ease;
+        cursor: pointer;
+        position: absolute;
+        right: 0%;
+        top: 229%;
+        visibility: hidden;
+        transform: translate(-225%, 57.5%);
+        font-size: 27px;
+        text-shadow: 0 0 15px rgb(255, 255, 255);
+        color: white;
+    }
+    #upSideArrowEnemy.active {
+        opacity: 1;
+        visibility: visible;
+    }
+    /* Fim Seta Branca pra  ======================== */
+    /* Inicio Seta Azul pra cima */
+    #upSideArrowEffectEnemy {
+        z-index: 5;
+        pointer-events: none;
+        cursor: pointer;
+        font-size: 27px;
+        right: 0%;
+        top: 224%;
+        transform: translate(-299%, 57.5%) rotate(-90deg);
+        position: absolute;
+        color: rgb(0, 217, 255);
+        visibility: hidden;
+        text-shadow: 0 0 15px rgb(138, 237, 255);
+    }
+    #upSideArrowEffect1Enemy {
+        z-index: 5;
+        pointer-events: none;
+        cursor: pointer;
+        font-size: 27px;
+        right: 0%;
+        top: 219%;
+        transform: translate(-299%, 57.5%) rotate(-90deg);
+        position: absolute;
+        color: rgb(0, 217, 255);
+        visibility: hidden;
+        text-shadow: 0 0 15px rgb(138, 237, 255);
+    }
+    #upSideArrowEffectEnemy.active {
+        top: 221%;
+        transition: 0.2s;
+        visibility: visible;
+    }
+    #upSideArrowEffect1Enemy.active {
+        top: 216%;
+        transition: 0.28s;
+        visibility: visible;
+    }
+    /* Fim Seta Azul pra Cima  ======================== */
+    /* Inicio Seta Branca pra Baixo */
+    #upSideDownArrowEnemy {
+        z-index: 5;
+        pointer-events: none;
+        opacity: 0;
+        visibility: collapse;
+        transition: opacity 0.2s ease;
+        cursor: pointer;
+        position: absolute;
+        top: 229.5%;
+        font-size: 27px;
+        transition: 0.2s opacity;
+        right: 0%;
+        text-shadow: 0 0 15px rgb(255, 255, 255);
+        color: white;
+        transform: translate(-225%, 57.5%);
+    }
+    #upSideDownArrowEnemy.active {
+        visibility: visible;
+        opacity: 1;
+    }
+    /* Fim Seta Branca pra Baixo  ======================== */
+    /* Inicio Seta Azul pra Baixo */
+    #upSideDownArrowEffectEnemy {
+        z-index: 5;
+        pointer-events: none;
+        cursor: pointer;
+        font-size: 27px;
+        right: 0%;
+        top: 233%;
+        transform: translate(-290%, 30.7%) rotate(90deg);
+        position: absolute;
+        color: rgb(0, 217, 255);
+        visibility: hidden;
+        text-shadow: 0 0 15px rgb(138, 237, 255);
+    }
+    #upSideDownArrowEffect1Enemy {
+        z-index: 5;
+        pointer-events: none;
+        cursor: pointer;
+        font-size: 27px;
+        right: 0%;
+        top: 238%;
+        transform: translate(-290%, 30.7%) rotate(90deg);
+        position: absolute;
+        color: rgb(0, 217, 255);
+        visibility: hidden;
+        text-shadow: 0 0 15px rgb(138, 237, 255);
+    }
+    #upSideDownArrowEffectEnemy.active {
+        top: 236.5%;
+        visibility: visible;
+        transition: 0.2s;
+    }
+    #upSideDownArrowEffect1Enemy.active {
+        top: 241%;
+        visibility: visible;
+        transition: 0.28s;
+    }
+    /* Fim Seta Azul pra Baixo  ======================== */
 }
