--- a/ShortJsGame/FrontEnd/style.css
+++ b/ShortJsGame/FrontEnd/style.css
@@ -65,13 +65,11 @@
     visibility: hidden; /* Invisível inicialmente */
     opacity: 0; /* Invisível com transição */
     width: 100%;
-    margin: 0 auto;
     display: flex;
     background-color: rgb(19, 19, 19);
     box-shadow: 0 10px 25px rgb(0, 0, 0);
-    justify-content:space-evenly; /* Espaça os elementos filhos */
+    justify-content:space-around;
     align-items: center; /* space-aroundAlinha verticalmente no centro */
-    gap: 59%;
 }
 #showStatus.active {
     max-height: 60px; /* Altura final da div quando estiver visível */
@@ -104,6 +102,8 @@
     color: white;
 }
 #showEnemyStatus {
+    position: absolute;
+    right: 2%;
     font-family: Verdana;
     font-size: large;
     color: white;
@@ -160,25 +160,13 @@
         z-index: 3;
         visibility: visible;
     }
-    #C11img, #C21img, #C31img {
-        transform: translate(-20%, 57.5%);
-        position: absolute;
-        width: 245px;
-        height: 385px;
-        right: -2%;
-        visibility: collapse;
-    }
-    #C11img.active, #C21img.active, #C31img.active {
-        z-index: 3;
-        visibility: visible;
-    }
     #characterAttacks {
         z-index: 4;
         width: 260px;
         top: 229.5%;
         height: 55px;
         position: absolute;
-        left: -3.3%;
+        left: -3.4%;
         transform: translate(20%, 57.5%);
         background-color: rgb(0, 0, 0);
         border-radius: 4px;
@@ -333,7 +321,7 @@
         text-shadow: 0 0 15px rgb(138, 237, 255);
     }
     #upSideDownArrowEffect.active {
-        top: 236%;
+        top: 236.5%;
         visibility: visible;
         transition: 0.2s;
     }
@@ -344,7 +332,7 @@
     }
     /* Fim Seta Azul pra Baixo  ======================== */
     #showStatus {
-        gap: 78%;
+        gap: 83%;
     }
     #healthBarContainer {
         position: absolute;
