--- a/ShortJsGame/FrontEnd/enemy.css
+++ b/ShortJsGame/FrontEnd/enemy.css
@@ -10,16 +10,19 @@
         transform: translate(-20%, 57.5%);
         position: absolute;
         width: 245px;
-        height: 385px;
+        height: 0px;
         right: -2%;
-        opacity: 0;
+        height: 385px;
         transition: 0.2s;
+        opacity: 0;
         visibility: collapse;
+        transition: opacity 0.2s, visibility 0.7s;
     }
     #C11img.active, #C21img.active, #C31img.active {
         z-index: 3;
         opacity: 1;
         visibility: visible;
+        
     }
     /* Inicio Seta Branca pra Cima */
     #upSideArrowEnemy {
@@ -171,8 +174,7 @@
     #enemyInfo {
         z-index: 1;
         display: grid;
-        transition: max-height 0.9s, visibility 0.9s;
-        top: 240%;
+        top: 242%;
         right: -3.2%;
         transform: translate(-20%, 57.5%);
         position: absolute;
@@ -184,6 +186,7 @@
     }
     #enemyInfo.active {
         visibility: visible;
+        top: 240%;
         max-height: 300px;
     }
     #spdDataEnemy, #defDataEnemy, #atkDataEnemy {
@@ -292,7 +295,7 @@
         cursor: pointer;
         font-size: 32px;
         right: 1.5%;
-        top: 240%;
+        top: 241%;
         transform: translate(-480%, 57.5%) rotate(-90deg);
         position: absolute;
         color: rgb(0, 217, 255);
@@ -352,7 +355,7 @@
         cursor: pointer;
         font-size: 32px;
         right: 1.5%;
-        top: 257%;
+        top: 256%;
         transform: translate(-465%, 30.7%) rotate(90deg);
         position: absolute;
         color: rgb(0, 217, 255);
@@ -368,6 +371,37 @@
         top: 263%;
         visibility: visible;
         transition: 0.28s;
+    }
+    #enemyInfo {
+        z-index: 1;
+        display: grid;
+        top: 268.5%;
+        right: 6%;
+        transform: translate(-16.9%, 57.5%);
+        position: absolute;
+        max-height: 0px;
+        width: 303px;
+        background-color: rgb(0, 0, 0);
+        visibility: collapse;
+        gap: 0;
+    }
+    #enemyInfo.active {
+        visibility: visible;
+        top: 265%;
+        max-height: 300px;
+    }
+    #spdDataEnemy, #defDataEnemy, #atkDataEnemy {
+        position: relative;
+        z-index: 0;
+        color: rgb(255, 255, 255);
+        background-color: rgb(24, 24, 24);
+        font-size: 0px;
+        transition: 0.15s;
+        margin: 1px;
+        padding-left: 10px;
+    }
+    #spdDataEnemy.active, #defDataEnemy.active, #atkDataEnemy.active {
+        font-size: 29px;
     }
     /* Fim Seta Azul pra Baixo  ======================== */
 }
