--- a/Canvas/Project_1/views/index.html
+++ b/Canvas/Project_1/views/index.html
@@ -11,8 +11,13 @@
     </canvas>
     
     
+    
+    <script src="/scripts/weapons.js"></script>
     <script src="/scripts/blood.js"></script>
-    <script src="/scripts/character.js"></script>
+    <script src="/scripts/characterModel.js"></script>
+    <script src="/scripts/characters.js"></script>
+    <script src="/scripts/mobsModel.js"></script>
+    <script src="/scripts/mobs.js"></script>
     <script src="/scripts/images.js"></script>
     <script src="/scripts/index.js"></script>
 </body>
