--- a/Canvas/Project_1/views/index.html
+++ b/Canvas/Project_1/views/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="/assets/styles/index.css"></link>
 </head>
 <body>
-    <canvas id="canvas1">
-    </canvas>
-    
-    
+    <canvas id="canvas1"></canvas>
     
     <script src="/scripts/weapons.js"></script>
     <script src="/scripts/blood.js"></script>
